Agrega un componente main

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 		<link rel="import" href="index-styles.html">
 		<style type="text/css" is="custom-style" include="index-styles"></style>
 		<!-- elements -->
+		<link rel="import" href="bower_components/cont-main/cont-main.html">
 	</head>
 	<body>
 		Hello
+		<cont-main><cont-main>
 	</body>
 </html>
