--- a/index.html
+++ b/index.html
@@ -1,21 +1,43 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8"> 
-		<title>Taxi Seguro</title>
-		<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-	  <meta name="mobile-web-app-capable" content="yes">
-	  <meta name="apple-mobile-web-app-capable" content="yes">
-		<!-- polymer -->
-		<script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
-		<link rel="import" href="bower_components/polymer/polymer.html">
-		<!-- estilo -->
-		<link rel="import" href="index-styles.html">
-		<style type="text/css" is="custom-style" include="index-styles"></style>
-		<!-- elements -->
-		<link rel="import" href="bower_components/cont-main/cont-main.html">
-	</head>
-	<body>
-		<cont-main><cont-main>
-	</body>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Taxi Seguro</title>
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <!-- polymer -->
+  <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+  <link rel="import" href="bower_components/polymer/polymer.html">
+  <!-- estilo -->
+  <link rel="import" href="index-styles.html">
+  <style type="text/css" is="custom-style" include="index-styles"></style>
+  <!-- elements -->
+  <link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
+  <link rel="import" href="bower_components/paper-drawer-panel/paper-drawer-panel.html">
+  <link rel="import" href="bower_components/paper-header-panel/paper-header-panel.html">
+  <link rel="import" href="bower_components/paper-toolbar/paper-toolbar.html">
+  <link rel="import" href="bower_components/polymer/polymer.html">
+  <link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout.html">
+  <link rel="import" href="bower_components/iron-flex-layout/classes/iron-flex-layout.html">
+  <link rel="import" href="bower_components/paper-input/all-imports.html">
+  <link rel="import" href="bower_components/paper-button/paper-button.html">
+  <link rel="import" href="bower_components/paper-menu/paper-menu.html">
+  <link rel="import" href="bower_components/paper-item/paper-item.html">
+  <link rel="import" href="bower_components/paper-card/paper-card.html">
+  <link rel="import" href="bower_components/iron-icons/iron-icons.html">
+  
+  <!-- my elements -->
+  <link rel="import" href="my_components/cont-main/cont-main.html">
+  <link rel="import" href="my_components/cont-drawer-panel/cont-drawer-panel.html">
+  <link rel="import" href="my_components/cont-drawer-peticiones/cont-drawer-peticiones.html">
+  <link rel="import" href="my_components/cont-drawer-buscar-taxista/cont-drawer-buscar-taxista.html">
+</head>
+
+<body>
+  <cont-main>
+  </cont-main>
+</body>
+
 </html>
