Empieza a preparar los templates de peticiones

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
   <link rel="import" href="bower_components/paper-item/paper-item.html">
   <link rel="import" href="bower_components/paper-card/paper-card.html">
   <link rel="import" href="bower_components/iron-icons/iron-icons.html">
-  
   <!-- my elements -->
   <link rel="import" href="my_components/cont-main/cont-main.html">
   <link rel="import" href="my_components/cont-drawer-panel/cont-drawer-panel.html">
@@ -35,7 +34,7 @@
   <link rel="import" href="my_components/cont-drawer-buscar-taxista/cont-drawer-buscar-taxista.html">
 </head>
 
-<body>
+<body fullbleed unresolved>
   <cont-main>
   </cont-main>
 </body>
