--- a/my_components/cont-drawer-peticiones/cont-drawer-peticiones.html
+++ b/my_components/cont-drawer-peticiones/cont-drawer-peticiones.html
@@ -10,33 +10,18 @@
     }
     </style>
     <!-- horizontal cards container -->
-    <div class="layout horizontal contenido">
-      <div class="flex">
-        <cont-peticion></cont-peticion>
-      </div>
-      <div class="flex">
-        <cont-peticion></cont-peticion>
-      </div>
-      <div class="flex">
-        <cont-peticion></cont-peticion>
-      </div>
-    </div>
-    <!-- horizontal cards container -->
-    <div class="layout horizontal contenido">
-      <div class="flex">
-        <cont-peticion></cont-peticion>
-      </div>
-      <div class="flex">
-        <cont-peticion></cont-peticion>
-      </div>
-      <div class="flex">
-        <cont-peticion></cont-peticion>
-      </div>
-    </div>
-    <!-- horizontal cards container -->
-    <div class="layout horizontal contenido">
-      <div class="flex">
-        <cont-peticion></cont-peticion>
+    <div class="contenido">
+      <paper-icon-button icon="cached"></paper-icon-button>
+      <div class="layout horizontal">
+        <div class="flex">
+          <cont-peticion></cont-peticion>
+        </div>
+        <div class="flex">
+          <cont-peticion></cont-peticion>
+        </div>
+        <div class="flex">
+          <cont-peticion></cont-peticion>
+        </div>
       </div>
     </div>
   </template>
