--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   <link rel="import" href="bower_components/paper-item/paper-item.html">
   <link rel="import" href="bower_components/paper-card/paper-card.html">
   <link rel="import" href="bower_components/iron-icons/iron-icons.html">
+  <link rel="import" href="bower_components/paper-material/paper-material.html">
+  <link rel="import" href="bower_components/paper-item/paper-item.html">
   <!-- my elements -->
   <link rel="import" href="my_components/cont-main/cont-main.html">
   <link rel="import" href="my_components/cont-drawer-panel/cont-drawer-panel.html">
