--- a/my_components/cont-main/cont-main.html
+++ b/my_components/cont-main/cont-main.html
@@ -46,9 +46,9 @@
         <div>
           <cont-drawer-peticiones></cont-drawer-peticiones>
         </div>
-        <div>
+        <!-- <div>
           <cont-drawer-buscar-taxista></cont-drawer-buscar-taxista>
-        </div>
+        </div> -->
       </paper-header-panel>
     </paper-drawer-panel>
   </template>
