Agrega propiedad 'peticiones' a 'cont-drawer-peticiones'

--- a/my_components/cont-drawer-peticiones/cont-drawer-peticiones-styles.html
+++ b/my_components/cont-drawer-peticiones/cont-drawer-peticiones-styles.html
@@ -1,23 +1,28 @@
 <dom-module id="cont-drawer-peticiones-styles">
-  <template>
-    <style>
-    .cont {
-      background-color: var(--paper-grey-600);
-    }
-    div.contenido{
-        border: 0px solid #bebebe;
-        padding-left: 30px;
-        padding-right: 30px;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        margin: 0px;
-        border-radius: 0px;
-        background-color: var(--paper-teal-100);
-        color: black;
-        /*
+    <template>
+        <style>
+        .cont {
+            background-color: var(--paper-grey-600);
+        }
+        
+        div.contenido {
+            border: 0px solid #bebebe;
+            padding-left: 30px;
+            padding-right: 30px;
+            padding-top: 20px;
+            padding-bottom: 20px;
+            margin: 0px;
+            border-radius: 0px;
+            background-color: var(--paper-teal-100);
+            color: black;
+            /*
         background-image: url(../../images/unam.jpg);
         */
-      }
-    </style>
-  </template>
+        }
+        
+        paper-item.aviso {
+            background-color: white;
+        }
+        </style>
+    </template>
 </dom-module>
